load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ngin-network/ngcore
# gazelle:proto default
# gazelle:go_proto_compilers @io_bazel_rules_go//proto:gogoslick_proto

# from https://github.com/bazelbuild/rules_go/issues/1364
# gazelle:resolve proto github.com/gogo/protobuf/gogoproto/gogo.proto @gogo_special_proto//github.com/gogo/protobuf/gogoproto
# gazelle:resolve proto go github.com/gogo/protobuf/gogoproto/gogo.proto @com_github_gogo_protobuf//gogoproto:go_default_library

gazelle(name = "gazelle")
