load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ngin-network/ngcore
# gazelle:resolve proto github.com/gogo/protobuf/gogoproto/gogo.proto @gogo_special_proto//github.com/gogo/protobuf/gogoproto
# gazelle:resolve proto go github.com/gogo/protobuf/gogoproto/gogo.proto @com_github_gogo_protobuf//gogoproto:go_default_library
gazelle(
    name = "gazelle",
    prefix = "github.com/ngin-network/ngcore",
)
