load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "init.go",
        "item.go",
        "swicher.go",
    ],
    importpath = "github.com/ngin-network/ngcore/chain",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "//utils:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
    ],
)
