load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "check_block.go",
        "check_chain.go",
        "consensus.go",
        "forker.go",
        "generation.go",
        "init.go",
        "pow.go",
    ],
    importpath = "github.com/ngchain/ngcore/consensus",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus/miner:go_default_library",
        "//ngchain:go_default_library",
        "//ngsheet:go_default_library",
        "//ngtypes:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
        "@com_github_ngchain_secp256k1//:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consensus_test.go",
        "pow_test.go",
    ],
    embed = [":go_default_library"],
)
