load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "abstract.go",
        "check_block.go",
        "consensus.go",
        "doc.go",
        "events.go",
        "generation.go",
        "miner.go",
        "pow.go",
        "sync.go",
        "sync_bootstrap.go",
        "sync_fork.go",
        "sync_get.go",
        "sync_remote_record.go",
        "wrap_chain.go",
    ],
    importpath = "github.com/ngchain/ngcore/consensus",
    visibility = ["//visibility:public"],
    deps = [
        "//ngp2p:go_default_library",
        "//ngstate:go_default_library",
        "//ngtypes:go_default_library",
        "//storage:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peerstore:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_nebulouslabs_fastrand//:go_default_library",
        "@com_github_ngchain_secp256k1//:go_default_library",
        "@com_github_ngin_network_cryptonight_go//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consensus_test.go",
        "miner_test.go",
        "pow_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//keytools:go_default_library",
        "//ngp2p:go_default_library",
        "//ngstate:go_default_library",
        "//ngtypes:go_default_library",
        "//storage:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
    ],
)
