load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "get_block.go",
        "get_tx.go",
        "init.go",
        "mine.go",
        "put.go",
    ],
    importpath = "github.com/ngchain/ngcore/ngchain",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "//utils:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
    ],
)
