load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstraps.go",
        "broadcast.go",
        "broadcastblock.go",
        "broadcasttx.go",
        "init.go",
        "localnode.go",
        "methods.go",
        "server.go",
        "sync.go",
        "wired.go",
        "wiredchain.go",
        "wiredgetchain.go",
        "wiredping.go",
        "wiredpong.go",
        "wiredreject.go",
    ],
    importpath = "github.com/ngchain/ngcore/ngp2p",
    visibility = ["//visibility:public"],
    deps = [
        "//ngchain:go_default_library",
        "//ngp2p/pb:go_default_library",
        "//ngtypes:go_default_library",
        "//sheet:go_default_library",
        "//txpool:go_default_library",
        "@com_github_gogo_protobuf//io:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/discovery:go_default_library",
        "@com_github_libp2p_go_libp2p_core//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//crypto:go_default_library",
        "@com_github_libp2p_go_libp2p_core//helpers:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//protocol:go_default_library",
        "@com_github_libp2p_go_libp2p_core//routing:go_default_library",
        "@com_github_libp2p_go_libp2p_kad_dht//:go_default_library",
        "@com_github_libp2p_go_libp2p_mplex//:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//:go_default_library",
        "@com_github_libp2p_go_libp2p_yamux//:go_default_library",
        "@com_github_libp2p_go_tcp_transport//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)
