load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "check.go",
        "handle.go",
        "manager.go",
        "nonce.go",
        "sheet.go",
    ],
    importpath = "github.com/ngchain/ngcore/ngsheet",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "//utils:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
    ],
)
