load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "check.go",
        "doc.go",
        "handle.go",
        "manager.go",
        "sheet.go",
        "txn.go",
    ],
    importpath = "github.com/ngchain/ngcore/ngstate",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "//utils:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
    ],
)
