load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "ngtypes_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogoslick_proto"],
    importpath = "github.com/ngchain/ngcore/ngtypes",
    proto = ":ngtypes_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "account.go",
        "block.go",
        "defaults.go",
        "difficulty.go",
        "doc.go",
        "sheet.go",
        "trie.go",
        "tx.go",
    ],
    embed = [":ngtypes_go_proto"],
    importpath = "github.com/ngchain/ngcore/ngtypes",
    visibility = ["//visibility:public"],
    deps = [
        "//utils:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
        "@com_github_ngchain_go_schnorr//:go_default_library",
        "@com_github_ngchain_secp256k1//:go_default_library",
        "@com_github_ngin_network_cryptonight_go//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_crypto//sha3:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "account_test.go",
        "block_test.go",
        "difficulty_test.go",
        "tx_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//utils:go_default_library",
        "@com_github_nebulouslabs_fastrand//:go_default_library",
        "@com_github_ngchain_secp256k1//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_crypto//sha3:go_default_library",
    ],
)

proto_library(
    name = "ngtypes_proto",
    srcs = ["types.proto"],
    visibility = ["//visibility:public"],
)
