load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configure_empty.go",
        "doc.go",
        "embedded_spec.go",
        "server.go",
    ],
    importpath = "github.com/ngchain/ngcore/restapi",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus:go_default_library",
        "//models:go_default_library",
        "//ngchain:go_default_library",
        "//ngp2p:go_default_library",
        "//ngsheet:go_default_library",
        "//restapi/operations:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//flagext:go_default_library",
        "@com_github_go_openapi_runtime//middleware:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@org_golang_x_net//netutil:go_default_library",
    ],
)
