load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "handler.go",
        "p2p.go",
        "server.go",
        "test.go",
        "tx.go",
    ],
    importpath = "github.com/ngchain/ngcore/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus:go_default_library",
        "//ngchain:go_default_library",
        "//ngp2p:go_default_library",
        "//ngtypes:go_default_library",
        "//sheet:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_maoxs2_go_jsonrpc2//:go_default_library",
        "@com_github_maoxs2_go_jsonrpc2//jsonrpc2http:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
)
