load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/ngin-network/ngcore/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_whyrusleeping_go_logging//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["db_test.go"],
    embed = [":go_default_library"],
)
