load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "del.go",
        "get.go",
        "pool.go",
        "put.go",
    ],
    importpath = "github.com/ngchain/ngcore/txpool",
    visibility = ["//visibility:public"],
    deps = [
        "//ngsheet:go_default_library",
        "//ngtypes:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pool_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//ngsheet:go_default_library",
        "//ngtypes:go_default_library",
    ],
)
