load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "js.go",
        "lua.go",
    ],
    importpath = "github.com/ngchain/ngcore/vm",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dop251_goja//:go_default_library",
        "@com_github_whyrusleeping_go_logging//:go_default_library",
        "@com_github_yuin_gopher_lua//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "js_test.go",
        "lua_test.go",
    ],
    embed = [":go_default_library"],
)
