load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "event.go",
        "manager.go",
        "vm.go",
    ],
    importpath = "github.com/ngchain/ngcore/vm",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "@com_github_dop251_goja//:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["vm_test.go"],
    embed = [":go_default_library"],
    deps = ["//ngtypes:go_default_library"],
)
