load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "event.go",
        "externs.go",
        "manager.go",
        "wasm.go",
    ],
    importpath = "github.com/ngchain/ngcore/vm",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "@com_github_bytecodealliance_wasmtime_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["wasm_test.go"],
    embed = [":go_default_library"],
)
