load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ngchain/ngcore/cmd/api-server",
    visibility = ["//visibility:private"],
    deps = [
        "//restapi:go_default_library",
        "//restapi/operations:go_default_library",
        "@com_github_go_openapi_loads//:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
    ],
)

go_binary(
    name = "api-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
