load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["genesisMain.go"],
    importpath = "github.com/ngchain/ngcore/cmd/genesis",
    visibility = ["//visibility:private"],
    deps = [
        "//keytools:go_default_library",
        "//ngtypes:go_default_library",
        "//utils:go_default_library",
    ],
)

go_binary(
    name = "genesis",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
