load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ngin-network/ngcore/cmd/keytool",
    visibility = ["//visibility:private"],
    deps = ["//keyManager:go_default_library"],
)

go_binary(
    name = "keytool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
