load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ngchain/ngcore/cmd/keytools",
    visibility = ["//visibility:private"],
    deps = ["//keytools:go_default_library"],
)

go_binary(
    name = "keytool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
