load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "genesistools.go",
        "keytools.go",
        "main.go",
        "rest.go",
    ],
    importpath = "github.com/ngchain/ngcore/cmd/ngcore",
    visibility = ["//visibility:private"],
    deps = [
        "//consensus:go_default_library",
        "//keytools:go_default_library",
        "//ngchain:go_default_library",
        "//ngp2p:go_default_library",
        "//ngsheet:go_default_library",
        "//ngtypes:go_default_library",
        "//restapi:go_default_library",
        "//restapi/operations:go_default_library",
        "//statik:go_default_library",
        "//storage:go_default_library",
        "//txpool:go_default_library",
        "//utils:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
        "@com_github_go_openapi_loads//:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
        "@com_github_nebulouslabs_fastrand//:go_default_library",
        "@com_github_ngin_network_cryptonight_go//:go_default_library",
        "@com_github_rakyll_statik//fs:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "ngcore",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
