load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "defaults.go",
        "genesistools.go",
        "keytools.go",
        "main.go",
    ],
    importpath = "github.com/ngchain/ngcore/cmd/ngcore",
    visibility = ["//visibility:private"],
    deps = [
        "//consensus:go_default_library",
        "//jsonrpc:go_default_library",
        "//keytools:go_default_library",
        "//ngp2p:go_default_library",
        "//ngtypes:go_default_library",
        "//storage:go_default_library",
        "//utils:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_mr_tron_base58//:go_default_library",
        "@com_github_nebulouslabs_fastrand//:go_default_library",
        "@com_github_ngchain_go_randomx//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "ngcore",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
