load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ngin-network/ngcore/cmd/vaultchainReader",
    visibility = ["//visibility:private"],
    deps = ["@io_etcd_go_bbolt//:go_default_library"],
)

go_binary(
    name = "vaultchainReader",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
