load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["miner.go"],
    importpath = "github.com/ngchain/ngcore/consensus/miner",
    visibility = ["//visibility:public"],
    deps = [
        "//ngtypes:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_nebulouslabs_fastrand//:go_default_library",
        "@com_github_ngin_network_cryptonight_go//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["miner_test.go"],
    embed = [":go_default_library"],
)
